css/index.css
#solarLogo {
    width: 30%;
    height: auto;
    margin: 0 auto;
}

.transparent-background {
    background-color: transparent;
}

body {
    background: url("../images/background.jpg") center center fixed no-repeat;
    position: relative;
    /*background-color: rgb(224, 240, 255);*/
    background-size: cover;
    min-height: 100%;
    height:100%;
}

.columnBackground {
        background-color: rgba(238, 238, 238, 0.8);
        margin-bottom: 20px;
        border-radius: 5px;
        padding: 20px;
}

table {
    width: 2px;
}

